<resources>
    <string name="app_name">Train Comming</string>
    <string name="Prefs_trainId">TrainNum_</string>
    <string name="Prefs_from">TrainFrom_</string>
    <string name="Prefs_to">TrainTo_</string>
    <string name="Prefs_date">DepartureTime_</string>
    <string name="trainnum">请输入查询列车号</string>
    <string name="trainstation">请输入您的出发站</string>
    <string name="chufadi">出发地</string>
    <string name="mudidi">目的地</string>
    <string name="riqi">出行日期</string>
    <string name="checi">车次</string>
    <string name="chezhan">车站</string>
    <string name="daodashijian">到达时间</string>
    <string name="lvtu">旅   途</string>
    <string name="faxian">发   现</string>
    <string name="shezhi">设   置</string>
    <string name="checheng">车程进行</string>
    <string name="shengyu">剩余时间</string>
    <string name="pinglun">评论</string>
    <string name="loading">正在加载</string>
    <string name="xiayizhan">下一站</string>
    <string name="tianjialvtu">添加旅途</string>
    <string name="qingshuruxinxi">添加旅途</string>
    <string name="queding">确定</string>
    <string name="quxiao">取消</string>
    <string name="queryFail">查询失败，是否输入错误？</string>
    <string name="querynull">输入信息不能为空</string>
    <string name="timeout">连接超时</string>
    <string name="chufa">出发城市</string>
    <string name="daoda">到达城市</string>
    <string name="personal_info">个人信息</string>
    <string name="dayu">></string>
    <string name="check_version">检查新版本</string>
    <string name="about">关于我们</string>
    <string name="advice">意见反馈</string>
    <string name="touxiang">头像</string>
    <string name="nicheng">昵称</string>
    <string name="zhuceorlogin">注册/登录</string>
    <string name="weisheding">未设定</string>
    <string name="username">用户名</string>
    <string name="passwd">密码（最大20字符）</string>
    <string name="xuanzeriqi">选择日期</string>
    <string name="xuanzeshijian">选择时间</string>
    <string name="submit">提交</string>
    <string name="biaoti">标题</string>
    <string name="shuruneirong">输入内容</string>
    <string name="shurunickname">昵称仅能设定一次</string>
    <string name="yupiao">商务座：23票  一等座：56票  二等座：233票</string>
</resources>
