<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/corners_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/chufa"
                android:id="@+id/item_tv_ticket_from"
                android:textSize="25dp"
                android:textColor="@color/greyText"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginEnd="25dp"
                android:text="@string/daoda"
                android:id="@+id/item_tv_ticket_to"
                android:textSize="25dp"
                android:textColor="@color/greyText"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <AutoCompleteTextView
            android:id="@+id/actv_from"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/chufadi"
            android:gravity="center_horizontal"
            android:paddingTop="40dp"
            android:textColor="@color/black"
            android:maxLines="1"
            android:textSize="35sp"
            android:singleLine="true"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/b_arrow"
                android:id="@+id/img_query_change"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <AutoCompleteTextView
                android:id="@+id/actv_to"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/mudidi"
                android:gravity="center_horizontal"
                android:paddingTop="40dp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:textSize="35sp"
                android:singleLine="true"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/whitesmoke"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/riqi"
                    android:paddingTop="20dp"
                    android:background="@null"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/dateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_style"
                        android:textColor="@color/beckWhite"
                        android:textSize="18sp"
                        android:layout_marginEnd="40dp"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/xuanzeriqi" />

                </FrameLayout>


            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_query"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:background="@mipmap/bt_query"/>
</LinearLayout>