<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/querypanel_03"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:gravity="end"
                    android:hint="@string/checi"
                    android:paddingTop="30dp"
                    android:paddingRight="30dp"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:hint="@string/chufadi"
                    android:paddingTop="45dp"
                    android:paddingRight="30dp"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:hint="@string/riqi"
                    android:paddingTop="50dp"

                    android:background="@null"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_query"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:background="@mipmap/bt_query"/>
</LinearLayout>